--- a/flutter_app/android/app/build.gradle
+++ b/flutter_app/android/app/build.gradle
@@ -23,7 +23,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.flutterapp"
+        applicationId "com.yourcompany.flutterapp"
         minSdkVersion 16
         targetSdkVersion 27
         versionCode 1
