--- a/jsApp/package.json
+++ b/jsApp/package.json
@@ -8,12 +8,18 @@
   },
   "dependencies": {
     "react": "16.2.0",
-    "react-native": "0.52.2"
+    "react-native": "0.53.3",
+    "react-native-elements": "^0.19.0",
+    "react-native-vector-icons": "^4.5.0",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
-    "babel-jest": "22.1.0",
+    "babel-jest": "22.4.0",
     "babel-preset-react-native": "4.0.0",
-    "jest": "22.1.4",
+    "jest": "22.4.0",
     "react-test-renderer": "16.2.0"
   },
   "jest": {
