--- a/jsApp/package.json
+++ b/jsApp/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "16.2.0",
     "react-native": "0.53.3",
+    "react-native-calendars": "^1.17.2",
     "react-native-elements": "^0.19.0",
     "react-native-vector-icons": "^4.5.0",
     "react-redux": "^5.0.7",
