--- a/jsApp/package.json
+++ b/jsApp/package.json
@@ -13,6 +13,7 @@
     "react-native-calendars": "^1.17.2",
     "react-native-elements": "^0.19.0",
     "react-native-vector-icons": "^4.5.0",
+    "react-navigation": "^1.2.1",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
