--- a/jsApp/package.json
+++ b/jsApp/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "native-base": "^2.3.9",
     "react": "16.2.0",
     "react-native": "0.53.3",
