--- a/jsApp/package.json
+++ b/jsApp/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "firebase": "^4.10.1",
     "native-base": "^2.3.9",
     "react": "16.2.0",
     "react-native": "0.53.3",
@@ -24,6 +25,16 @@
   "devDependencies": {
     "babel-jest": "22.4.0",
     "babel-preset-react-native": "4.0.0",
+    "eslint": "^4.18.2",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-google": "^0.9.1",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-standard": "^3.0.1",
     "jest": "22.4.0",
     "react-test-renderer": "16.2.0"
   },
