--- a/jsApp/.eslintrc.json
+++ b/jsApp/.eslintrc.json
@@ -1,4 +1,7 @@
 {
-  "extends": "google",
-  "parser": "babel-eslint"
+    "extends": "airbnb",
+    "rules": {
+      "react/prefer-stateless-function": 0,
+      "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+    }
 }
