add interface server for firebase

--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,5 @@ project/plugins/project/
 
 
 # End of https://www.gitignore.io/api/sbt,node,scala
+#
+backend/terakoyawatch-firebase-adminsdk-0ksrc-b4bbf5e344.json
