--- a/backend/front/package.json
+++ b/backend/front/package.json
@@ -8,6 +8,7 @@
     "react": "^16.2.0",
     "react-datepicker": "^1.2.2",
     "react-dom": "^16.2.0",
+    "react-markdown": "^3.3.0",
     "react-scripts": "1.1.1"
   },
   "scripts": {
