--- a/jsApp/package.json
+++ b/jsApp/package.json
@@ -11,10 +11,12 @@
     "firebase": "^4.10.1",
     "native-base": "^2.3.9",
     "react": "16.2.0",
+    "react-markdown": "^3.3.0",
     "react-native": "0.53.3",
     "react-native-calendars": "^1.17.2",
     "react-native-elements": "^0.19.0",
     "react-native-router-flux": "^4.0.0-beta.28",
+    "react-native-simple-markdown": "^1.1.0",
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.2.1",
     "react-redux": "^5.0.7",
