--- a/jsApp/package.json
+++ b/jsApp/package.json
@@ -15,6 +15,7 @@
     "react-native": "0.53.3",
     "react-native-calendars": "^1.17.2",
     "react-native-elements": "^0.19.0",
+    "react-native-push-notification": "^3.0.2",
     "react-native-router-flux": "^4.0.0-beta.28",
     "react-native-simple-markdown": "^1.1.0",
     "react-native-vector-icons": "^4.5.0",
